@@ -7,6 +7,13 @@ Note that ``RB_ID=#`` correspond to associated messages in commits.
 6.x
 -----
 
+Runtime Behavior Changes
+~~~~~~~~~~~~~~~~~~~~~~~~
+
+  * finagle-core: When evaluating NameTree unions, return components of the union in Ok state rather
+    than waiting for all components to be Ok. This enables resilience of unions when part of the
+    tree cannot be resolved. ``RB_ID=697114``
+
 Deprecations
 ~~~~~~~~~~~~
 
